# AIR-OpenRAG

./: .gitignore  README.md  faiss_store_v1.py  main.py  optimized_embed_v6.py  process_ragbench_chroma.py  process_ragbench_faiss.py  pyproject.toml
src/: explore_ragbench.py
